// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea matches snapshot for error: wrapperErrorText mount 1`] = `
.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
}

.emotion-10:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-10 {
    max-width: 960px;
  }
}

.emotion-5 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-8 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #b10e1e;
}

@media only screen and (min-width:641px) {
  .emotion-8 {
    font-size: 19px;
    line-height: 1.3;
    width: 75%;
  }
}

.emotion-8 [disabled] {
  cursor: auto;
}

.emotion-8:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(TextArea)
  errorText="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <TextArea
    className="glamor-0"
    errorText="example"
    input={Object {}}
    meta={
      Object {
        "error": "example",
        "touched": true,
      }
    }
  >
    <glamorous(Label)
      className="glamor-0"
      error="example"
    >
      <Label
        className="glamor-0"
        error="example"
      >
        <Styled(label)
          className="glamor-0"
          error="example"
        >
          <label
            className="glamor-0 glamor-10"
          >
            <glamorous(LabelText)>
              <LabelText
                className="glamor-0"
              >
                <Styled(span)
                  className="glamor-0"
                >
                  <span
                    className="glamor-0 glamor-1"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </glamorous(LabelText)>
            <glamorous(ErrorText)>
              <ErrorText
                className="glamor-0"
              >
                <Styled(span)
                  className="glamor-0"
                >
                  <span
                    className="glamor-0 glamor-5"
                  >
                    example
                  </span>
                </Styled(span)>
              </ErrorText>
            </glamorous(ErrorText)>
            <Styled(textarea)
              error="example"
              rows="5"
              type="text"
            >
              <textarea
                className="glamor-8"
                rows="5"
                type="text"
              />
            </Styled(textarea)>
          </label>
        </Styled(label)>
      </Label>
    </glamorous(Label)>
  </TextArea>
</glamorous(TextArea)>
`;

exports[`Textarea matches snapshot for hint: wrapperHint mount 1`] = `
.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
}

.emotion-10:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-10 {
    max-width: 960px;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-8 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-8 {
    font-size: 19px;
    line-height: 1.3;
    width: 75%;
  }
}

.emotion-8 [disabled] {
  cursor: auto;
}

.emotion-8:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.emotion-5 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #6f777b;
}

@media only screen and (min-width:641px) {
  .emotion-5 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(TextArea)
  hint="example"
>
  <TextArea
    className="glamor-0"
    hint="example"
    input={Object {}}
    meta={Object {}}
  >
    <glamorous(Label)
      className="glamor-0"
    >
      <Label
        className="glamor-0"
      >
        <Styled(label)
          className="glamor-0"
        >
          <label
            className="glamor-0 glamor-10"
          >
            <glamorous(LabelText)>
              <LabelText
                className="glamor-0"
              >
                <Styled(span)
                  className="glamor-0"
                >
                  <span
                    className="glamor-0 glamor-1"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </glamorous(LabelText)>
            <glamorous(HintText)>
              <HintText
                className="glamor-0"
              >
                <Styled(span)
                  className="glamor-0"
                >
                  <span
                    className="glamor-0 glamor-5"
                  >
                    example
                  </span>
                </Styled(span)>
              </HintText>
            </glamorous(HintText)>
            <Styled(textarea)
              rows="5"
              type="text"
            >
              <textarea
                className="glamor-8"
                rows="5"
                type="text"
              />
            </Styled(textarea)>
          </label>
        </Styled(label)>
      </Label>
    </glamorous(Label)>
  </TextArea>
</glamorous(TextArea)>
`;

exports[`Textarea matches wrapper snapshot: wrapper mount 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
}

.emotion-6:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-6 {
    max-width: 960px;
  }
}

.emotion-1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-4 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-4 {
    font-size: 19px;
    line-height: 1.3;
    width: 75%;
  }
}

.emotion-4 [disabled] {
  cursor: auto;
}

.emotion-4:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.glamor-0,
[data-glamor-0] {
  margin-bottom: 0;
}

@media only screen and (min-width: 641px) {
  .glamor-0,
  [data-glamor-0] {
    margin-bottom: 0;
  }
}

<glamorous(TextArea)>
  <TextArea
    className="glamor-0"
    input={Object {}}
    meta={Object {}}
  >
    <glamorous(Label)
      className="glamor-0"
    >
      <Label
        className="glamor-0"
      >
        <Styled(label)
          className="glamor-0"
        >
          <label
            className="glamor-0 glamor-6"
          >
            <glamorous(LabelText)>
              <LabelText
                className="glamor-0"
              >
                <Styled(span)
                  className="glamor-0"
                >
                  <span
                    className="glamor-0 glamor-1"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </glamorous(LabelText)>
            <Styled(textarea)
              rows="5"
              type="text"
            >
              <textarea
                className="glamor-4"
                rows="5"
                type="text"
              />
            </Styled(textarea)>
          </label>
        </Styled(label)>
      </Label>
    </glamorous(Label)>
  </TextArea>
</glamorous(TextArea)>
`;
